# roverside_entrapment

./: CMakeLists.txt  README.md  package.xml
scripts/: DecayFilter.py  _template_node.py  entrapment_detector.py  entrapment_generator.py
